recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:4: error: not found: value int
  int a = last(l.tail) + 1
  ^Last:5: error: not found: value a
  return last(a)
              ^